# girder

./: CHANGELOG.rst  package.json  setup.cfg  setup.py  tox.ini
clients/web/src/views/body/: GroupView.js
docs/: api-docs.rst  conf.py  plugin-development.rst  python-client.rst
girder/: __init__.py  constants.py
girder/api/: describe.py  rest.py
girder/models/: group.py  model_base.py  user.py
girder/utility/: __init__.py  install.py  server.py
grunt_tasks/: build.js
plugins/item_tasks/plugin_tests/: tasksSpec.js
plugins/item_tasks/web_client/views/: ItemSelectorWidget.js
tests/: CMakeLists.txt
tests/cases/: plugin_load_failure_test.py  rest_decorator_test.py  system_test.py
